# docs_for_llm

./: .gitignore  Makefile  graph_v1.py  graph_v2.py  graph_v2_per_chunk.py  graph_v2_per_topic.py  llm_logger.py  main.py  model_utils.py  pyproject.toml  source_utils.py  test_graph_v2_per_chunk.py  test_llm_logger.py
mcp/: mcp.md  mcp_libs.md
