[project]
name = "docs-for-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "langgraph>=0.3.31",
    "markitdown>=0.1.1",
    "openai>=1.75.0",
    "pygraphviz>=1.14",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pdbpp>=0.11.6",
]
